Fix broken layout, CSS and images applied correctly

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Background & Typography */
 body {
   background-color: #B19CD9; /* Lavender theme */
-  background-image: url('D:\pixelbuddy\pokeball.png'); /* optional background pattern */
+  background-image: url('pokeball.png'); /* optional background pattern */
   background-repeat: repeat;
   background-size: 200px;
   font-family: 'Pixelify Sans', cursive;
